# src/app/controllers/auth/auth.controller.ts
@@ -1,13 +1,12 @@
 import { Body, Controller, Get, Post, Route, Request, Security, Tags, Query } from "tsoa"
 import { Response, SuccessResponse } from "tsoa"
 import { Request as ExpReq } from "express"
-import { User } from "../../entities"
-import { getManager } from "typeorm"
+import { User, prisma } from "../../models"
+import { IUserDetail } from "../../dtos"
 import * as jwt from "jsonwebtoken"
-import { getUser, getUserById } from "../../auth/auth.service"
 import { ForbiddenError, UnauthorizedError } from "../../errors/MessageError"
 import { config } from "../../../config"
-import { IAuthData } from "../../auth/auth.service"
+import { IAuthData, authService, userService } from "../../services"
 
 let refreshTokens: string[] = []
 
@@ -16,17 +15,15 @@ let refreshTokens: string[] = []
 export class AuthController extends Controller {
   @Get("me")
   @Security("jwt")
-  public async getUser(@Request() req: { user: IAuthData }): Promise<User> {
-    return getManager().findOneOrFail(User, req.user.id, {
-      relations: ["photos", "groups"]
-    })
+  public async getUser(@Request() req: { user: IAuthData }): Promise<IUserDetail> {
+    return await userService.getUserDetail(req.user.id)
   }
 
   @Post("login")
   public async login(
     @Body() { username, password }: { username: string; password: string }
   ): Promise<{ accessToken: string; refreshToken: string }> {
-    const user = await getUser(username, password)
+    const user = await authService.getUser(username, password)
 
     // generate an access token
     const accessToken = jwt.sign(user, config.accessTokenSecret, {
@@ -54,18 +51,16 @@ export class AuthController extends Controller {
     }
   ): Promise<User> {
     const userId = req?.user?.id
+    const user = await prisma.user.findFirst({ where: { id: userId } })
 
-    const manager = getManager()
-    const user = await manager.findOneOrFail(User, userId, {
-      select: ["id", "passwordHash"]
-    })
-
-    if (!user || !user.veryfyPassword(pass.oldpassword)) {
+    if (!user || !authService.veryfyPassword(user.passwordHash, pass.oldpassword)) {
       throw new UnauthorizedError("Old password are invalid!")
     }
 
-    user.setPassword(pass.newpassword)
-    return await manager.save(user)
+    return prisma.user.update({
+      where: { id: userId },
+      data: { passwordHash: authService.getPasswordHash(pass.newpassword) }
+    })
   }
 
   @Post("refresh_token")
@@ -86,7 +81,7 @@ export class AuthController extends Controller {
     }) as unknown as { payload: IAuthData }
     const userId = decoded.payload?.id
 
-    const user = await getUserById(userId)
+    const user = await authService.getUserById(userId)
 
     // generate an access token
     const accessToken = jwt.sign(user, config.accessTokenSecret, {
