# src/app/dtos/index.ts
@@ -1,0 +1,5 @@
+export * from "./user.dto"
+export * from "./group.dto"
+export * from "./paginate.dto"
+export * from "./permission.dto"
+export * from "./photo.dto"
