# src/app/dtos/permission.dto.ts
@@ -1,3 +1,6 @@
+import { Permission } from "../models"
+import { Paginate } from "./paginate.dto"
+
 export interface CreatePermissionParams {
   name: string
   description?: string
@@ -6,4 +9,32 @@ export interface CreatePermissionParams {
 export interface UpdatePermissionParams {
   description?: string
   isActive?: boolean
+}
+
+export type IPermissionList = Paginate<Permission>
+
+export type IPermissionDetail = Permission
+
+export function createPermissionList(
+  permissions: Permission[],
+  page: number,
+  perPage: number,
+  total: number
+): IPermissionList {
+  const rows = permissions.map((p) => {
+    return { ...p, passwordHash: undefined } as unknown as Permission
+  })
+
+  return { rows, page, perPage, total }
+}
+
+export function createPermissionDetail(permission: Permission): IPermissionDetail {
+  return {
+    id: permission.id,
+    name: permission.name,
+    description: permission.description,
+    updatedAt: permission.updatedAt,
+    createAt: permission.createAt,
+    isActive: permission.isActive
+  } as IPermissionDetail
 }
